--- a/build.gradle
+++ b/build.gradle
@@ -17,14 +17,22 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
+	
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	
 	// spring boot data jpa
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	//mysql connector
 	implementation 'mysql:mysql-connector-java:8.0.31'
+	//spring cache
+	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-cache
+	implementation 'org.springframework.boot:spring-boot-starter-cache'
+	//caffeien cache
+	implementation 'com.github.ben-manes.caffeine:caffeine'
 	
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	
+	
 }
 
 tasks.named('test') {
