--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,9 @@ dependencies {
 	//caffeien cache
 	implementation 'com.github.ben-manes.caffeine:caffeine'
 	
+	//Hot Deployment
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	
 	
